fix(fp-1543): collapse/contract icon text code

--- a/client/src/styles/trumps/icon.css
+++ b/client/src/styles/trumps/icon.css
@@ -55,9 +55,8 @@
 }
 
 /* Aliases */
-/* .icon-contract */
-.icon-collapse::before {
-  content: '\e915';
+.icon-collapse/* aka .icon-contract */::before {
+  content: '\ea15';
 }
 
 /* Overrides */
